Fix overflowing of long words such as email addresses by wrapping them

--- a/subscription_manager/static/styles/layout/_body.scss
+++ b/subscription_manager/static/styles/layout/_body.scss
@@ -4,6 +4,11 @@ body {
   background-color: $white;
 }
 
+.container {
+  overflow: hidden;
+  overflow-wrap: break-word;
+}
+
 main {
   display: grid;
   box-sizing: border-box;
